integrated optimus with lulu money

--- a/lulumoney/app/src/main/res/values/themes.xml
+++ b/lulumoney/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="MyTheme" parent="@style/Theme.Lulumoney">
+    <style name="FlutterTheme" parent="@style/Theme.Lulumoney">
         <item name="android:windowIsTranslucent">true</item>
     </style>
 </resources>
